# engine_c3

./: .gitignore  .gitmodules  .project.gf  CMakeLists.txt  README.md  build.sh  project.json  run.sh
lib/volk/: volk.c
resources/shaders/: shader_main.slang
src/: app.c3  arena.c3  camera.c3  clock.c3  constants.c3  elastic_array.c3  entity.c3  event.c3  geometry.c3  input.c3  logger.c3  main.c3  mesh.c3  platform.c3  soa.c3  texture.c3  util.c3  window.c3
src/bindings/: volk_with_vk.c3i
src/dependencies/bindings/: glfw.c3i  vk_volk.c3i
src/math/: matrix.c3  vec.c3
src/vk/: buffer.c3  cmd_buffer.c3  core.c3  device.c3  image.c3  instance.c3  pipeline.c3  renderer.c3  swapchain.c3  synch.c3  util.c3
